03HTTP连接管理/traffic-mirror/front-envoy.yaml
admin:
  profile_path: /tmp/envoy.prof
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
       address: 0.0.0.0
       port_value: 9901

layered_runtime:
  layers:
  - name: admin
    admin_layer: {}
    
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 8088 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: vhost1
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: prod
                  request_mirror_policies:
                  - cluster: gray
                    runtime_fraction:
                      default_value:
                        numerator: 100 # 将100的流量都镜像到gray
                        denominator: HUNDRED
                        # curl -XPOST 'http://127.0.0.1:9901/runtime_modify?routing.request_mirror.gray=20'
                      runtime_key: routing.request_mirror.gray  # runtime动态调整，这里调整gray就是调整numerator的值 
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: prod
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: prod
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: prod
                port_value: 8080
  - name: gray
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: gray
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: gray
                port_value: 8080
